--- a/cli/cdh_aws.cfg
+++ b/cli/cdh_aws.cfg
@@ -2,4 +2,5 @@ cm_hostname=ec2-blah-blah.compute.amazonaws.com
 cm_username=admin
 cm_password=dummy
 aws_region=eu-west-1
-aws_boto_cfg=$BOTO_CONFIG
+#aws_boto_cfg=$BOTO_CONFIG
+aws_boto_cfg=$PASSWORDS_DIR/ubend.prod.eu-west-1.credentials.boto
